# turbo-engine

./: .gitignore  CLAUDE.md  PLAN.md  Taskfile.yml  _config.yml  docker-bake.hcl  go.work  go.work.sum  index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  ci.yml  e2e.yml  k8s-e2e.yml
_layouts/: default.html
e2e/scenarios/: 01-petstore-basic.json
examples/federation/: README.md  turbo-engine.yaml
examples/petstore/: README.md  turbo-engine.yaml
hack/claude/: investigate.sh  k8s-investigate.sh  run-and-report.sh  turbo-gh
hack/scripts/: capture-screenshots.sh  capture-traces.sh  dump-ci-report.sh  enrich-timeline-traces.py  generate-trace-viewer.sh  k8s-collect-debug.sh  k8s-dump-report.sh  k8s-e2e-tests.sh  k8s-run-scenario.py  publish-ci-report.sh  run-smoke-tests.sh  wait-for-healthy.sh
infra/docker/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
k8s-e2e/: index.md
services/builder/: Dockerfile  Taskfile.yml  go.mod
services/envmanager/: Dockerfile  Taskfile.yml  go.mod  go.sum
services/gateway/: .dockerignore  Cargo.toml  Dockerfile  Taskfile.yml
services/gateway/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  proxy.rs
services/gateway/tests/: routing_test.rs
services/operator/: Dockerfile  Taskfile.yml  go.mod  go.sum
services/registry/: .dockerignore  Dockerfile  Taskfile.yml  go.mod  go.sum
specs/: Taskfile.yml  buf.gen.yaml  buf.yaml  package.json
specs/jsonschema/: package-manifest.schema.json
specs/openapi/: builder.openapi.yaml  envmanager.openapi.yaml  registry.openapi.yaml
tools/cli/: Taskfile.yml  package.json  tsconfig.json  tsup.config.ts
ui/console/: .dockerignore  (+7 more)
(+813 files in other folders)
