[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "API gateway / ingress controller for turbo-engine API graphs"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Web framework & HTTP
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util", "timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "propagate-header", "set-header"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }

# HTTP client for proxying & config fetch
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
